# transition-ecologique-des-entreprises-backend

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Pipfile  Procfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  tsconfig.base.json  tsconfig.json
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
tee_backend/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
tee_backend/services/: __init__.py
tee_backend/tests/: __init__.py
tee_backend/web/: __init__.py  app.py  application.py  lifetime.py
tee_backend/web/api/: __init__.py  router.py
tee_backend/web/api/brevo/: __init__.py  schema.py  views.py
tee_backend/web/api/docs/: __init__.py
tee_backend/web/api/echo/: __init__.py
tee_backend/web/api/insee/: __init__.py  schema.py  views.py
tee_backend/web/api/monitoring/: __init__.py
tee_backend_test/: __init__.py  __main__.py  conftest.py  settings.py
tee_backend_test/services/: __init__.py
tee_backend_test/tests/: __init__.py
tee_backend_test/web/: __init__.py  app.py  application.py  lifetime.py
tee_backend_test/web/api/: __init__.py  router.py
tee_backend_test/web/api/brevo/: __init__.py  views.py
tee_backend_test/web/api/docs/: __init__.py
tee_backend_test/web/api/insee/: __init__.py  views.py
tee_backend_test/web/api/monitoring/: __init__.py
